--- a/menu.html
+++ b/menu.html
@@ -119,74 +119,216 @@
                 <div class="col-lg-12 d-flex justify-content-center">
                     <ul id="menu-flters">
                         <li data-filter="*" class="filter-active">Всё</li>
-                        <li data-filter=".filter-kitchen">Кухня</li>
+                        <li data-filter=".filter-cocktails">Коктейли</li>
+                        <li data-filter=".filter-shots">Шоты</li>
                         <li data-filter=".filter-tincture">Настойки</li>
                         <li data-filter=".filter-beer">Пиво</li>
+                        <li data-filter=".filter-kitchen">Кухня</li>
                     </ul>
                 </div>
             </div>
 
             <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
+                <!-- ======= КОКТЕЙЛИ ======= -->
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-sections">
+                        <h2>Коктейли 🍹</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Джин-Тоник 0,25л</a><span>₽350</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        На выбор: кардамон, ромашка, клубника, апельсин
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">MARTINI FIERO TONIC 0,25л</a><span>₽370</span>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Прикольный розовый 0,25л</a><span>₽450</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Для гурманов-приколистов. Замешали нашу фирменную малину-имбиръ с дыней и мятой. Получилось
+                        прикольно.
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">ЭДВАРД КЕНУЭЙ 0,25л</a><span>₽500</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Легкий летний коктейль с Martini Fiero и ликером Triple Sec
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">МОРС 0,4л</a><span>₽550</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Морсик для взрослых из клюквы, вишни и граната
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">ЭЛИЗАБЕТ СУОНН</a><span>₽550</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Лавандовый мягкий лонг с добавлением мятного ликёра и водки
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Дайте людям рома 0,4л</a><span>₽550</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Как Пино-колада, только для настоящих бруталов. Ром на кокосе и грейпфруте, сиропчики и всякие
+                        классные прикольчики.
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Жеж-тоник 0,25л</a><span>₽450</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Однажды Женя смешал тоник, джин и соленую карамель, получилось вкусно.
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">CHERRY-MARY 0,4л</a><span>₽600</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Вишня, кола для прикола, табаско, водка, джин.
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Glory-Halls 0,25л</a><span>₽450</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Освежающий коктейль с клубникой, чуток острый.
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Mint mind 0,25л</a><span>₽450</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Мятно, маракуйно, кисло, сладко.
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Тэкил рулит 0,25л</a><span>₽550</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Сухой ананас с текилой и чёрной смородиной.
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">MiLF'S KISS 0,25л</a><span>₽350</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Нежный «мамкин» десерт (клубничный/персиковый).
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">КРОВАВАЯ БАНЯ 0,4л</a><span>₽500</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Томатный, острый, с добавлением нашей фирменной перцовки, огуречного рассола и пряностей.
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Гудбай 0,25л</a><span>₽600</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Мы не настаиваем, вы сами отойдете.
+                        Апероль, Джин, Сухой Мартини
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cocktails">
+                    <div class="menu-content">
+                        <a href="#">Никаясебе 0,25л</a><span>₽600</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        Второй наш твист на Негрони
+                        Апероль, Мартини Фиеро и Бурбон
+                    </div>
+                </div>
+
+
                 <!-- ======= ШОТЫ ======= -->
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-sections">
                         <h2>ШОТЫ</h2>
                     </div>
                 </div>
-
-
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">Лаванда, мята, джин 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">Соленая карамель, вишня, ром 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">Облепиха, малина имбирь, текила 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">Бабл гам, маракуйя, лимон, водка 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">Имбирный пряник, коровка, виски 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">СЕТ ИЗ 5 ШОТОВ</a><span>₽1000</span>
                     </div>
                 </div>
-
-
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «ФРЕДИ КЛЮКВЕР»</a><span>₽1000</span>
                     </div>
                     <div class="menu-ingredients">
-                        -5 Кисло-сладких шотов с клюквой и арбузом
+                        5 Кисло-сладких шотов с клюквой и арбузом
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «СИНИЙ ДЕНЧИК»</a><span>₽1000</span>
                     </div>
                     <div class="menu-ingredients">
-                        -5 Сладко-пряных шота с ананасом, цитрусом и корицей
+                        5 Сладко-пряных шота с ананасом, цитрусом и корицей
                     </div>
                 </div>
-
-                <div class="col-lg-6 menu-item filter-tincture">
+                <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-content">
                         <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «ШРЕК»</a><span>₽1000</span>
                     </div>
@@ -199,7 +341,7 @@
                 <!-- ======= Настойки ======= -->
                 <div class="col-lg-6 menu-item filter-tincture">
                     <div class="menu-sections">
-                        <h2>Настойки 🫗</h2>
+                        <h2>Настойки</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-tincture">
