--- a/menu.html
+++ b/menu.html
@@ -124,6 +124,17 @@
                         <li data-filter=".filter-tincture">Настойки</li>
                         <li data-filter=".filter-beer">Пиво</li>
                         <li data-filter=".filter-kitchen">Кухня</li>
+                        <li data-filter=".filter-whiskey">Виски</li>
+                        <li data-filter=".filter-wine">Вино</li>
+                        <li data-filter=".filter-rum">Ром</li>
+                        <li data-filter=".filter-tequila">Текила</li>
+                        <li data-filter=".filter-gin">Джин</li>
+                        <li data-filter=".filter-liqueurs">Ликёры</li>
+                        <li data-filter=".filter-aperitifs">Аперетивы</li>
+                        <li data-filter=".filter-vodka">Водка</li>
+                        <li data-filter=".filter-cognac">Коньяк</li>
+                        <li data-filter=".filter-brandy">Бренди</li>
+                        <li data-filter=".filter-soft-drinks">Бренди</li>
                     </ul>
                 </div>
             </div>
@@ -143,13 +154,11 @@
                         На выбор: кардамон, ромашка, клубника, апельсин
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">MARTINI FIERO TONIC 0,25л</a><span>₽370</span>
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">Прикольный розовый 0,25л</a><span>₽450</span>
@@ -159,7 +168,6 @@
                         прикольно.
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">ЭДВАРД КЕНУЭЙ 0,25л</a><span>₽500</span>
@@ -168,7 +176,6 @@
                         Легкий летний коктейль с Martini Fiero и ликером Triple Sec
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">МОРС 0,4л</a><span>₽550</span>
@@ -177,7 +184,6 @@
                         Морсик для взрослых из клюквы, вишни и граната
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">ЭЛИЗАБЕТ СУОНН</a><span>₽550</span>
@@ -186,7 +192,6 @@
                         Лавандовый мягкий лонг с добавлением мятного ликёра и водки
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">Дайте людям рома 0,4л</a><span>₽550</span>
@@ -196,7 +201,6 @@
                         классные прикольчики.
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">Жеж-тоник 0,25л</a><span>₽450</span>
@@ -205,7 +209,6 @@
                         Однажды Женя смешал тоник, джин и соленую карамель, получилось вкусно.
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">CHERRY-MARY 0,4л</a><span>₽600</span>
@@ -238,7 +241,6 @@
                         Сухой ананас с текилой и чёрной смородиной.
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">MiLF'S KISS 0,25л</a><span>₽350</span>
@@ -247,7 +249,6 @@
                         Нежный «мамкин» десерт (клубничный/персиковый).
                     </div>
                 </div>
-
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
                         <a href="#">КРОВАВАЯ БАНЯ 0,4л</a><span>₽500</span>
@@ -279,7 +280,7 @@
                 <!-- ======= ШОТЫ ======= -->
                 <div class="col-lg-6 menu-item filter-shots">
                     <div class="menu-sections">
-                        <h2>ШОТЫ</h2>
+                        <h2>Шоты</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-shots">
@@ -497,7 +498,7 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">ПЕЛЬМЕНИ ФРИ</a><span>160</span>
+                        <a href="#">ПЕЛЬМЕНИ ФРИ</a><span>₽160</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
@@ -532,8 +533,7 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">КУРИНАЯ КОТЛЕТА С СЫРОМ И ЗАПЕЧЕННЫМ КАРТОФЕЛЕМ (ВРЕМЕННО
-                            НЕТ)</a><span>₽300</span>
+                        <a href="#">КУРИНАЯ КОТЛЕТА С СЫРОМ И ЗАПЕЧЕННЫМ КАРТОФЕЛЕМ (ВРЕМЕННО НЕТ)</a><span>₽300</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
@@ -686,22 +686,22 @@
                         <h2>РОМ</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-content">
                         <a href="#">BRUGAL ANEJO 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-content">
                         <a href="#">NEGRITA SPICED 0,04л</a><span>₽150</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-content">
                         <a href="#">NEGRRITA WHITE 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-content">
                         <a href="#">GIAROLA WHITE 0,04л</a><span>₽200</span>
                     </div>
@@ -744,75 +744,75 @@
 
 
                 <!-- ======= ЛИКЕРЫ ======= -->
-                <div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-liqueurs">
                     <div class="menu-sections">
                         <h2>ЛИКЕРЫ</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-liqueurs">
                     <div class="menu-content">
                         <a href="#">SAMBUCA 0,04л</a><span>₽180</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-liqueurs">
                     <div class="menu-content">
                         <a href="#">ЦАРСКИЙ СЛИВОЧНЫЙ ЛИКЕР 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-liqueurs">
                     <div class="menu-content">
                         <a href="#">FRUKO SCHULZ ABSINTH ABSOLVENT 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-liqueurs">
                     <div class="menu-content">
                         <a href="#">JAEGERMEISTER 0,04</a><span>₽400</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-liqueurs">
                     <div class="menu-content">
                         <a href="#">TUNDRA BITTER MINT</a><span>₽100</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-liqueurs">
                     <div class="menu-content">
                         <a href="#">Beluga Hunting Berry Bitter</a><span>₽280</span>
                     </div>
                 </div>
 
+
                 <!-- ======= АПЕРИТИВЫ ======= -->
-                <div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-aperitifs">
                     <div class="menu-sections">
                         <h2>АПЕРИТИВЫ</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-aperitifs">
                     <div class="menu-content">
                         <a href="#">MARTINI FIERO 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-aperitifs">
                     <div class="menu-content">
                         <a href="#">MARTINI EXTRA DRY 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-aperitifs">
                     <div class="menu-content">
                         <a href="#">MARTINI ROSSO 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-                (временно нет)
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-aperitifs">
                     <div class="menu-content">
                         <a href="#">MARTINI BIANCO 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-aperitifs">
                     <div class="menu-content">
                         <a href="#">ПОРТО TRESARCOS TAWNY 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-aperitifs">
                     <div class="menu-content">
                         <a href="#">APEROL 0,04л</a><span>₽250</span>
                     </div>
@@ -820,34 +820,34 @@
 
 
                 <!-- ======= ВОДКА ======= -->
-                <div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-sections">
                         <h2>ВОДКА</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
                         <a href="#">БЕЛУГА ТРАНСАТЛАНТИК 0,04л</a><span>₽150</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
                         <a href="#">ЦАРСКАЯ ОРИГИНАЛЬНАЯ 0,04л</a><span>₽100</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
                         <a href="#">ЦАРСКАЯ ЗОЛОТАЯ 0,04л</a><span>₽120</span>
                     </div>
                 </div>
 
                 <!-- ======= КОНЬЯК ======= -->
-                <div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-cognac">
                     <div class="menu-sections">
                         <h2>КОНЬЯК</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-cognac">
                     <div class="menu-content">
                         <a href="#">ROULLET VSOP GRANDE CHAMPAGNE 0,04л</a><span>₽400</span>
                     </div>
@@ -855,44 +855,44 @@
 
 
                 <!-- ======= БРЕНДИ ======= -->
-                <div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-brandy">
                     <div class="menu-sections">
                         <h2>БРЕНДИ</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-brandy">
                     <div class="menu-content">
                         <a href="#">BRUNEL NAPOLEON VSOP 0,04л</a><span>₽210</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-brandy">
                     <div class="menu-content">
                         <a href="#">HENRI MOUNIER 0,04л</a><span>₽400</span>
                     </div>
                 </div>
 
                 <!-- ======= БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ ======= -->
-                <div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-sections">
                         <h2>БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
                         <a href="#">ДОМАШНИЕ ЛИМОНАДЫ 0,4л</a><span>₽250</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
                         <a href="#">СОК RICH 0,2л</a><span>₽100</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
                         <a href="#">КОЛА/ШВЕПС 0,2л</a><span>₽80</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
                         <a href="#">RED BULL 0,25л</a><span>₽170</span>
                     </div>
