Добавил активную ссылку на номер и обновил стиль кода

--- a/menu.html
+++ b/menu.html
@@ -45,8 +45,9 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
 
         <div class="contact-info d-flex align-items-center">
-            <i class="bi bi-phone d-flex align-items-center"><span>+7 (999) 993-51-17</span></i>
-            <i class="bi bi-clock d-flex align-items-center ms-4"><span> Пн-Пт: 16:00–04:00; Сб,Вс: 16:00–06:00</span></i>
+            <i class="bi bi-phone d-flex align-items-center"><span><a
+                    href="tel: +79999935117">+7 (999) 993-51-17</a></span></i>
+            <i class="bi bi-clock d-flex align-items-center ms-4"><span> Пн-Пт: 16:00–04:00<br>Сб-Вс: 16:00–06:00</span></i>
         </div>
 
         <!--      <div class="languages d-none d-md-flex align-items-center">-->
