Добавил активную ссылку на номер в футер

--- a/menu.html
+++ b/menu.html
@@ -918,7 +918,7 @@
                         <p>
                             Малая Митрофаньевская ул., 5, корп. 1 <br>
                             Метро Фрунзенская, Московские ворота, Балтийская<br><br>
-                            <strong>Телефон:</strong> +7 (999) 993-51-17<br>
+                            <strong>Телефон:</strong><a href="tel: +79999935117"> +7 (999) 993-51-17</a><br>
                             <strong>Email:</strong> bar-depo@yandex.ru<br>
                         </p>
                         <!--              <div class="social-links mt-3">-->
