--- a/index.html
+++ b/index.html
@@ -370,12 +370,10 @@
 
                         <div class="open-hours">
                             <i class="bi bi-clock"></i>
-                            <h4>Часы посещения:</h4>
+                            <h4>Часы работы:</h4>
                             <p>
-                                Пн-Пт:<br>
-                                16:00–04:00<br>
-                                Суббота-Воскресение:<br>
-                                16:00–06:00
+                                Пн-Пт: 16:00–04:00<br>
+                                Сб-Вс: 16:00–06:00
                             </p>
                         </div>
 
@@ -388,40 +386,12 @@
                         <div class="phone">
                             <i class="bi bi-phone"></i>
                             <h4>Телефон:</h4>
-                            <p>+7 (999) 993-51-17</p>
+                            <p><a href="tel: +79999935117"> +7 (999) 993-51-17</a></p>
                         </div>
 
                     </div>
 
                 </div>
-
-                <!--          <div class="col-lg-8 mt-5 mt-lg-0">-->
-
-                <!--            <form action="forms/contact.php" method="post" role="form" class="php-email-form">-->
-                <!--              <div class="row">-->
-                <!--                <div class="col-md-6 form-group">-->
-                <!--                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>-->
-                <!--                </div>-->
-                <!--                <div class="col-md-6 form-group mt-3 mt-md-0">-->
-                <!--                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>-->
-                <!--                </div>-->
-                <!--              </div>-->
-                <!--              <div class="form-group mt-3">-->
-                <!--                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>-->
-                <!--              </div>-->
-                <!--              <div class="form-group mt-3">-->
-                <!--                <textarea class="form-control" name="message" rows="8" placeholder="Message" required></textarea>-->
-                <!--              </div>-->
-                <!--              <div class="my-3">-->
-                <!--                <div class="loading">Loading</div>-->
-                <!--                <div class="error-message"></div>-->
-                <!--                <div class="sent-message">Your message has been sent. Thank you!</div>-->
-                <!--              </div>-->
-                <!--              <div class="text-center"><button type="submit">Send Message</button></div>-->
-                <!--            </form>-->
-
-                <!--          </div>-->
-
             </div>
 
         </div>
