--- a/menu.html
+++ b/menu.html
@@ -148,11 +148,12 @@
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
+                    <img src="assets/img/menu/gin-and-tonic.jpg" class="menu-img" alt="">
                     <div class="menu-content">
                         <a href="#">Джин-Тоник 0,25л</a><span>₽350</span>
                     </div>
                     <div class="menu-ingredients">
-                        На выбор: кардамон, ромашка, клубника, апельсин
+                        На выбор: кардамон, ромашка, клубника, апельсин.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
@@ -174,7 +175,7 @@
                         <a href="#">ЭДВАРД КЕНУЭЙ 0,25л</a><span>₽500</span>
                     </div>
                     <div class="menu-ingredients">
-                        Легкий летний коктейль с Martini Fiero и ликером Triple Sec
+                        Легкий летний коктейль с Martini Fiero и ликером Triple Sec.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
@@ -182,7 +183,7 @@
                         <a href="#">МОРС 0,4л</a><span>₽550</span>
                     </div>
                     <div class="menu-ingredients">
-                        Морсик для взрослых из клюквы, вишни и граната
+                        Морсик для взрослых из клюквы, вишни и граната.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
@@ -264,7 +265,7 @@
                     </div>
                     <div class="menu-ingredients">
                         Мы не настаиваем, вы сами отойдете.
-                        Апероль, Джин, Сухой Мартини
+                        Апероль, Джин, Сухой Мартини.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
@@ -273,7 +274,7 @@
                     </div>
                     <div class="menu-ingredients">
                         Второй наш твист на Негрони
-                        Апероль, Мартини Фиеро и Бурбон
+                        Апероль, Мартини Фиеро и Бурбон.
                     </div>
                 </div>
 
@@ -319,7 +320,7 @@
                         <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «ФРЕДИ КЛЮКВЕР»</a><span>₽1000</span>
                     </div>
                     <div class="menu-ingredients">
-                        5 Кисло-сладких шотов с клюквой и арбузом
+                        5 Кисло-сладких шотов с клюквой и арбузом.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-shots">
@@ -327,7 +328,7 @@
                         <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «СИНИЙ ДЕНЧИК»</a><span>₽1000</span>
                     </div>
                     <div class="menu-ingredients">
-                        5 Сладко-пряных шота с ананасом, цитрусом и корицей
+                        5 Сладко-пряных шота с ананасом, цитрусом и корицей.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-shots">
@@ -335,7 +336,7 @@
                         <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «ШРЕК»</a><span>₽1000</span>
                     </div>
                     <div class="menu-ingredients">
-                        5 Освежающе-кислых шота с Mintu, яблоком и киви
+                        5 Освежающе-кислых шота с Mintu, яблоком и киви.
                     </div>
                 </div>
 
@@ -942,27 +943,6 @@
                         <li><i class="bx bx-chevron-right"></i> <a href="index.html#contact">Контакты</a></li>
                     </ul>
                 </div>
-
-                <!--          <div class="col-lg-3 col-md-6 footer-links">-->
-                <!--            <h4>Our Services</h4>-->
-                <!--            <ul>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>-->
-                <!--            </ul>-->
-                <!--          </div>-->
-
-                <!--          <div class="col-lg-4 col-md-6 footer-newsletter">-->
-                <!--            <h4>Our Newsletter</h4>-->
-                <!--            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>-->
-                <!--            <form action="" method="post">-->
-                <!--              <input type="email" name="email"><input type="submit" value="Subscribe">-->
-                <!--            </form>-->
-
-                <!--          </div>-->
-
             </div>
         </div>
     </div>
