--- a/index.html
+++ b/index.html
@@ -49,13 +49,6 @@
                     href="tel: +79999935117">+7 (999) 993-51-17</a></span></i>
             <i class="bi bi-clock d-flex align-items-center ms-4"><span> Пн-Пт: 16:00–04:00<br>Сб-Вс: 16:00–06:00</span></i>
         </div>
-
-        <!--      <div class="languages d-none d-md-flex align-items-center">-->
-        <!--        <ul>-->
-        <!--          <li>En</li>-->
-        <!--          <li><a href="#">De</a></li>-->
-        <!--        </ul>-->
-        <!--      </div>-->
     </div>
 </div>
 
@@ -243,10 +236,6 @@
                                         праздника.
                                     </li>
                                 </ul>
-                                <p>
-                                    <!--                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate-->
-                                    <!--                    velit esse cillum dolore eu fugiat nulla pariatur-->
-                                </p>
                             </div>
                         </div>
                     </div><!-- End testimonial item -->
@@ -409,20 +398,12 @@
                     <div class="footer-info">
                         <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.svg" alt=""
                                                                                class="img-fluid"></a>
-                        <!--              <h3>Restaurantly</h3>-->
                         <p>
                             Малая Митрофаньевская ул., 5, корп. 1 <br>
                             Метро Фрунзенская, Московские ворота, Балтийская<br><br>
                             <strong>Телефон:</strong><a href="tel: +79999935117"> +7 (999) 993-51-17</a><br>
                             <strong>Email:</strong> bar-depo@yandex.ru<br>
                         </p>
-                        <!--              <div class="social-links mt-3">-->
-                        <!--                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
-                        <!--                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
-                        <!--                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>-->
-                        <!--                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-                        <!--                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>-->
-                        <!--              </div>-->
                     </div>
                 </div>
 
@@ -437,41 +418,13 @@
                         <li><i class="bx bx-chevron-right"></i> <a href="#contact">Контакты</a></li>
                     </ul>
                 </div>
-
-                <!--          <div class="col-lg-3 col-md-6 footer-links">-->
-                <!--            <h4>Our Services</h4>-->
-                <!--            <ul>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>-->
-                <!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>-->
-                <!--            </ul>-->
-                <!--          </div>-->
-
-                <!--          <div class="col-lg-4 col-md-6 footer-newsletter">-->
-                <!--            <h4>Our Newsletter</h4>-->
-                <!--            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>-->
-                <!--            <form action="" method="post">-->
-                <!--              <input type="email" name="email"><input type="submit" value="Subscribe">-->
-                <!--            </form>-->
-
-                <!--          </div>-->
-
             </div>
         </div>
     </div>
 
     <div class="container">
         <div class="copyright">
-            &copy; <strong><span>Бар "ДЕПО" 2022-2023</span></strong>. Все права сохранены
-        </div>
-        <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-            <!--        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
+            &copy; <strong><span>Бар "ДЕПО"</span></strong> 2022-2023. Все права сохранены
         </div>
     </div>
 </footer><!-- End Footer -->
