--- a/menu.html
+++ b/menu.html
@@ -49,24 +49,13 @@
                     href="tel: +79999935117">+7 (999) 993-51-17</a></span></i>
             <i class="bi bi-clock d-flex align-items-center ms-4"><span> Пн-Пт: 16:00–04:00<br>Сб-Вс: 16:00–06:00</span></i>
         </div>
-
-        <!--      <div class="languages d-none d-md-flex align-items-center">-->
-        <!--        <ul>-->
-        <!--          <li>En</li>-->
-        <!--          <li><a href="#">De</a></li>-->
-        <!--        </ul>-->
-        <!--      </div>-->
     </div>
 </div>
 
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top d-flex align-items-cente">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
-
-        <!--      <h1 class="logo me-auto me-lg-0"><a href="index.html">БАР "ДЕПО"</a></h1>-->
-        <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.svg" alt="" class="img-fluid"></a>
-
         <nav id="navbar" class="navbar order-last order-lg-0">
             <ul>
                 <li><a class="nav-link scrollto" href="menu.html">Меню</a></li>
@@ -77,34 +66,11 @@
                 <li><a class="nav-link scrollto" href="index.html#contact">Контакты</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
-        <!--      <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Book a table</a>-->
-
+        </nav>
     </div>
 </header><!-- End Header -->
 
 <main id="main">
-    <!--    <section class="breadcrumbs">-->
-    <!--      <div class="container">-->
-
-    <!--        <div class="d-flex justify-content-between align-items-center">-->
-    <!--          <h2>Inner Page</h2>-->
-    <!--          <ol>-->
-    <!--            <li><a href="index.html">Home</a></li>-->
-    <!--            <li>Inner Page</li>-->
-    <!--          </ol>-->
-    <!--        </div>-->
-
-    <!--      </div>-->
-    <!--    </section>-->
-
-    <!--    <section class="inner-page">-->
-    <!--      <div class="container">-->
-    <!--        <p>-->
-    <!--          Example inner page template-->
-    <!--        </p>-->
-    <!--      </div>-->
-    <!--    </section>-->
     <!-- ======= Menu Section ======= -->
     <section id="menu" class="menu section-bg">
         <div class="container" data-aos="fade-up">
@@ -915,20 +881,12 @@
                     <div class="footer-info">
                         <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.svg" alt=""
                                                                                class="img-fluid"></a>
-                        <!--              <h3>Restaurantly</h3>-->
                         <p>
                             Малая Митрофаньевская ул., 5, корп. 1 <br>
                             Метро Фрунзенская, Московские ворота, Балтийская<br><br>
                             <strong>Телефон:</strong><a href="tel: +79999935117"> +7 (999) 993-51-17</a><br>
                             <strong>Email:</strong> bar-depo@yandex.ru<br>
                         </p>
-                        <!--              <div class="social-links mt-3">-->
-                        <!--                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
-                        <!--                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
-                        <!--                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>-->
-                        <!--                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-                        <!--                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>-->
-                        <!--              </div>-->
                     </div>
                 </div>
 
@@ -949,14 +907,7 @@
 
     <div class="container">
         <div class="copyright">
-            &copy; <strong><span>Бар "ДЕПО" 2022-2023</span></strong>. Все права сохранены
-        </div>
-        <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-            <!--        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
+            &copy; <strong><span>Бар "ДЕПО"</span></strong> 2022-2023
         </div>
     </div>
 </footer><!-- End Footer -->
